--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Proyecto</string>
+    <string name="app_name">TaskManager</string>
+    <string name="Config">Configuración</string>
 </resources>
