--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="app_name">TaskManager</string>
     <string name="Config">Configuration</string>
+    <string name="sign_out">Sign out</string>
+    <string name="Log_Sign_in">Log in / Sign in</string>
+    <string name="user">User</string>
+    <string name="pass">Password</string>
+    <string name="log_in">Log in</string>
+    <string name="sign_in">Sign in</string>
 </resources>
