--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">TaskManager</string>
     <string name="Config">Configuración</string>
+    <string name="sign_out">Cerrar sesión</string>
+    <string name="Log_Sign_in">Iniciar Sesión / Registrarse</string>
+    <string name="user">Usuario</string>
+    <string name="pass">Contraseña</string>
+    <string name="log_in">Iniciar sesión</string>
+    <string name="sign_in">Registrarse</string>
 </resources>
