--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,5 @@
     <string name="pass">Password</string>
     <string name="log_in">Log in</string>
     <string name="sign_in">Sign in</string>
+    <string name="credenciales_incorrectas">Incorrect credentials</string>
 </resources>
