--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -9,4 +9,5 @@
     <string name="log_in">Hasi saioa</string>
     <string name="sign_in">Izena eman</string>
     <string name="credenciales_incorrectas">Datu okerrak</string>
+    <string name="agregar_tarea">Gehitu zeregina</string>
 </resources>
