--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="log_in">Iniciar sesión</string>
     <string name="sign_in">Registrarse</string>
     <string name="credenciales_incorrectas">Credenciales incorrectas</string>
+    <string name="agregar_tarea">Agregar tarea</string>
 </resources>
