Opciones a cada tarea y funcionalidad eliminar

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,4 +25,6 @@
     <string name="idioma">Language</string>
     <string name="modo_noche">Dark mode</string>
     <string name="Proyectos">Projects</string>
+    <string name="Editar">Edit</string>
+    <string name="Eliminar">Delete</string>
 </resources>
