--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -27,4 +27,11 @@
     <string name="Proyectos">Proiektuak</string>
     <string name="Editar">Editatu</string>
     <string name="Eliminar">Ezabatu</string>
+    <string name="edit_titulo">Editatu izenburua</string>
+    <string name="edit_descr">Editatu deskribapena</string>
+    <string name="edit_fecha">Editatu data</string>
+    <string name="err_tarea_no_encontrada">Errorea: zeregina ez da aurkitu</string>
+    <string name="tarea_actualizada">Zereginaren informazioa berriztu da</string>
+    <string name="err_tarea_actualizada">Ezin izan da zereginaren informazioa berriztu</string>
+    <string name="Editar_tarea">EDITATU ZEREGINA</string>
 </resources>
