--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">TaskManager</string>
     <string name="Config">Konfigurazioa</string>
     <string name="sign_out">Itxi saioa</string>
-    <string name="Log_Sign_in">Hasi saioa / Izena eman</string>
+    <string name="Log_Sign_in">HASI SAIOA / IZENA EMAN</string>
     <string name="user">Erabiltzailea</string>
     <string name="pass">Pasahitza</string>
     <string name="log_in">Hasi saioa</string>
