--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,4 +40,6 @@
     <string name="Atencion">Attention!</string>
     <string name="la_tarea">The task</string>
     <string name="vence_24">"goes extinct in less than 24 hours. "</string>
+    <string name="selec_idioma">Select language</string>
+    <string name="cancelar">Cancel</string>
 </resources>
