Añadir searchView a la toolbar. Añadir nombre de usuario en el panel de navegacion. Arreglo de tema en barra dispositivo

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -45,4 +45,6 @@
     <string name="mostrar_fecha">Show date</string>
     <string name="ocultar_fecha">Hide date</string>
     <string name="config_fecha">Configurate due date</string>
+    <string name="search">Search</string>
+    <string name="buscar_tareas">Search tasks...</string>
 </resources>
