--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="config_fecha">Configurar fecha de finalización</string>
     <string name="search">Buscar</string>
     <string name="buscar_tareas">Buscar tareas...</string>
+    <string name="err_sin_tareas">No hay tareas asignadas a ese dia</string>
 </resources>
