--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -48,4 +48,5 @@
     <string name="search">Search</string>
     <string name="buscar_tareas">Search tasks...</string>
     <string name="err_sin_tareas">No tasks are due to that day</string>
+    <string name="Calendario">Calendar</string>
 </resources>
