--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -48,4 +48,5 @@
     <string name="search">Bilatu</string>
     <string name="buscar_tareas">Bilatu zereginak...</string>
     <string name="err_sin_tareas">Ez dago egiteko zereginik egun horretan</string>
+    <string name="Calendario">Egutegia</string>
 </resources>
