--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="search">Buscar</string>
     <string name="buscar_tareas">Buscar tareas...</string>
     <string name="err_sin_tareas">No hay tareas asignadas a ese dia</string>
+    <string name="Calendario">Calendario</string>
 </resources>
