--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -49,4 +49,5 @@
     <string name="buscar_tareas">Bilatu zereginak...</string>
     <string name="err_sin_tareas">Ez dago egiteko zereginik egun horretan</string>
     <string name="Calendario">Egutegia</string>
+    <string name="Añadir_nueva_ta">GEHITU ZEREGIN BERRIA</string>
 </resources>
