--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -50,4 +50,5 @@
     <string name="err_sin_tareas">Ez dago egiteko zereginik egun horretan</string>
     <string name="Calendario">Egutegia</string>
     <string name="Añadir_nueva_ta">GEHITU ZEREGIN BERRIA</string>
+    <string name="Ubicación">Kokapena</string>
 </resources>
