--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="err_sin_tareas">No hay tareas asignadas a ese dia</string>
     <string name="Calendario">Calendario</string>
     <string name="Añadir_nueva_ta">AÑADIR NUEVA TAREA</string>
+    <string name="Ubicación">Ubicación</string>
 </resources>
