--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -51,4 +51,5 @@
     <string name="Calendario">Egutegia</string>
     <string name="Añadir_nueva_ta">GEHITU ZEREGIN BERRIA</string>
     <string name="Ubicación">Kokapena</string>
+    <string name="confirmar_ubicacion">Berretsi kokapena</string>
 </resources>
