--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="Calendario">Calendario</string>
     <string name="Añadir_nueva_ta">AÑADIR NUEVA TAREA</string>
     <string name="Ubicación">Ubicación</string>
+    <string name="confirmar_ubicacion">Confirmar ubicación</string>
 </resources>
