Arreglar bug ubicacion apagada pero permisos concedidos (icono de ubicacion se ponia por defecto) y traducciones toasts

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -52,4 +52,8 @@
     <string name="Añadir_nueva_ta">ADD NEW TASK</string>
     <string name="Ubicación">Ubication</string>
     <string name="confirmar_ubicacion">Confirm ubication</string>
+    <string name="selec_ubi">First select an ubication</string>
+    <string name="no_ubi">It wasn\'t possible to get the ubication. using a default location</string>
+    <string name="error_ubi">"Error obtaining ubication: "</string>
+    <string name="ubi_denegado">Ubication permission denied</string>
 </resources>
