--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="descr_icono">Tu ubicación actual</string>
     <string name="descr_selec_ubi">Ubicación seleccionada</string>
     <string name="err_obten_usu">Error al obtener lo datos del usuario</string>
+    <string name="tomar_foto">Sacar foto</string>
+    <string name="selec_galeria">Seleccionar de la galería</string>
 </resources>
