Comprobar la conexión a Internet antes de inicio/registro de sesión

--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -61,4 +61,5 @@
     <string name="err_obten_usu">Errorea erabiltzailearen datuak bilatzerakoan</string>
     <string name="tomar_foto">Atera argazkia</string>
     <string name="selec_galeria">Hautatu galeriatik</string>
+    <string name="no_internet">Ez duzu Internetik</string>
 </resources>
