--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,4 +61,5 @@
     <string name="err_obten_usu">Erreor getting user information</string>
     <string name="tomar_foto">Take a picture</string>
     <string name="selec_galeria">Select from gallery</string>
+    <string name="no_internet">No Internet connection</string>
 </resources>
