Sincronización tabla de usuarios local con la de la base de datos remota

--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -62,4 +62,5 @@
     <string name="tomar_foto">Atera argazkia</string>
     <string name="selec_galeria">Hautatu galeriatik</string>
     <string name="no_internet">Ez duzu Internetik</string>
+    <string name="err_bd_local">Datu base lokalean izena ematerakoan errorea</string>
 </resources>
