--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,5 @@
     <string name="tomar_foto">Take a picture</string>
     <string name="selec_galeria">Select from gallery</string>
     <string name="no_internet">No Internet connection</string>
+    <string name="err_bd_local">Error signing up in the local database</string>
 </resources>
