--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="tomar_foto">Sacar foto</string>
     <string name="selec_galeria">Seleccionar de la galería</string>
     <string name="no_internet">No tienes conexión a Internet</string>
+    <string name="err_bd_local">Error al registrarse en la base de datos local</string>
 </resources>
