Añadir completar + eliminar y juntar workers en 1 solo

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,4 +69,6 @@
     <string name="err_bd_foto">Error updating local database</string>
     <string name="err_http">"HTTP error connecting: "</string>
     <string name="err_foto">Error updating profile picture</string>
+    <string name="serv_crear">The task is saved in the server</string>
+    <string name="serv_err_tarea">Error trying to save task in the server</string>
 </resources>
