--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -69,4 +69,6 @@
     <string name="err_bd_foto">Errorea datu base lokala eguneratzen</string>
     <string name="err_http">"HTTP errorea konektatzerakoan: "</string>
     <string name="err_foto">Errorea profil argazkia eguneratzen</string>
+    <string name="serv_crear">Zeregina zerbitzarian gorde da</string>
+    <string name="serv_err_tarea">Errorea zeregina zerbitzarian gordetzerakoan</string>
 </resources>
