--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,6 @@
     <string name="err_bd_foto">Error al actualizar la base de datos local</string>
     <string name="err_http">"Error HTTP al conectarse: "</string>
     <string name="err_foto">Error al actualizar la imagen de perfil</string>
+    <string name="serv_crear">Tarea registrada remotamente</string>
+    <string name="serv_err_tarea">Error guardando la tarea en el servidor</string>
 </resources>
