--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,4 +71,5 @@
     <string name="err_foto">Error updating profile picture</string>
     <string name="serv_crear">The task is saved in the server</string>
     <string name="serv_err_tarea">Error trying to save task in the server</string>
+    <string name="err_sinc_tar_serv">Error synchronizing tasks with the server, try again with Internet connection</string>
 </resources>
