--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -72,4 +72,5 @@
     <string name="serv_crear">The task is saved in the server</string>
     <string name="serv_err_tarea">Error trying to save task in the server</string>
     <string name="err_sinc_tar_serv">Error synchronizing tasks with the server, try again with Internet connection</string>
+    <string name="no_tareas">No tasks to show</string>
 </resources>
