--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -72,4 +72,5 @@
     <string name="serv_crear">Zeregina zerbitzarian gorde da</string>
     <string name="serv_err_tarea">Errorea zeregina zerbitzarian gordetzerakoan</string>
     <string name="err_sinc_tar_serv">Errorea zerbitzariarekin zereginak bateratzen, saiatu Internetarekin</string>
+    <string name="no_tareas">Ez dago zereginik erakusteko</string>
 </resources>
